--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,22 +10,14 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      - name: Pull latest changes
-        run: git pull
-        working-directory: ~/kacify
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Build frontend
-        run: |
-          npm install
-          npm run build
-        working-directory: ~/kacify/frontend
+        run: docker build -t kacifyfrontend frontend
 
       - name: Build API
-        run: |
-          npm install
-          npm run build
-        working-directory: ~/kacify/api
+        run: docker build -t kacifyapi api
 
-      - name: Start services with Docker
+      - name: Start docker
         run: docker-compose up -d
-        working-directory: ~/kacify
