--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,9 @@ services:
     container_name: kacifyapi
     env_file:
       - ./api/.env
-  web:
+    ports:
+      - "8000:8000"
+  frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
@@ -17,3 +19,5 @@ services:
       - api
     env_file:
       - ./frontend/.env
+    ports:
+      - "3000:3000"
