--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,10 @@ services:
       - ./frontend/.env
     ports:
       - "3000:3000"
+  mongodb:
+    image: mongo:latest
+    container_name: kacifymongodb
+    ports:
+      - "27017:27017"
+    volumes:
+      - ./mongodb:/data/db:rw
