--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,3 +28,21 @@ services:
       - "27017:27017"
     volumes:
       - ./mongodb:/data/db:rw
+  postgres:
+    image: postgres:latest
+    container_name: kacifypostgres
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./postgres:/var/lib/postgresql/data:rw
+  redis:
+    image: redis:latest
+    container_name: kacifyredis
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./redis:/data:rw
